--- a/public/index.html
+++ b/public/index.html
@@ -7,5 +7,18 @@
   </head>
   <body>
     <canvas class="webgl"></canvas>
+
+    <div class="crosshair"></div>
+
+    <div id="blocker">
+      <div id="instructions">
+        <p style="font-size: 36px">Click to play</p>
+        <p>
+          Move: WASD<br />
+          Jump: SPACE<br />
+          Look: MOUSE
+        </p>
+      </div>
+    </div>
   </body>
 </html>
