Added raycast from FirstPerson view

--- a/public/index.html
+++ b/public/index.html
@@ -15,7 +15,8 @@
         <p style="font-size: 36px">Click to play</p>
         <p>
           Move: WASD<br />
-          Look: MOUSE
+          Look: MOUSE<br />
+          Sprint: SHIFT
         </p>
       </div>
     </div>
