Swapped out for mobilecontrols

--- a/public/index.html
+++ b/public/index.html
@@ -10,15 +10,15 @@
 
     <div class="crosshair"></div>
 
-    <div id="blocker">
-      <div id="instructions">
-        <p style="font-size: 36px">Click to play</p>
-        <p>
-          Move: WASD<br />
-          Look: MOUSE<br />
-          Sprint: SHIFT
-        </p>
-      </div>
-    </div>
+    <!-- <div id="blocker"> -->
+    <!--   <div id="instructions"> -->
+    <!--     <p style="font-size: 36px">Click to play</p> -->
+    <!--     <p> -->
+    <!--       Move: WASD<br /> -->
+    <!--       Look: MOUSE<br /> -->
+    <!--       Sprint: SHIFT -->
+    <!--     </p> -->
+    <!--   </div> -->
+    <!-- </div> -->
   </body>
 </html>
