--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
     <canvas class="webgl"></canvas>
 
     <div class="crosshair"></div>
+    <div class="zone-joystick"></div>
 
     <!-- <div id="blocker"> -->
     <!--   <div id="instructions"> -->
