--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,15 @@
     <div class="crosshair"></div>
     <div class="zone-joystick"></div>
 
-    <!-- <div id="blocker"> -->
-    <!--   <div id="instructions"> -->
-    <!--     <p style="font-size: 36px">Click to play</p> -->
-    <!--     <p> -->
-    <!--       Move: WASD<br /> -->
-    <!--       Look: MOUSE<br /> -->
-    <!--       Sprint: SHIFT -->
-    <!--     </p> -->
-    <!--   </div> -->
-    <!-- </div> -->
+    <div id="blocker">
+      <div id="instructions">
+        <p style="font-size: 36px">Click to play</p>
+        <p>
+          Move: WASD<br />
+          Look: MOUSE<br />
+          Sprint: SHIFT
+        </p>
+      </div>
+    </div>
   </body>
 </html>
