--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
     <div class="crosshair"></div>
     <div class="zone-joystick"></div>
 
-    <div id="blocker">
+    <!-- <div id="blocker">
       <div id="instructions">
         <p style="font-size: 36px">Click to play</p>
         <p>
@@ -20,6 +20,6 @@
           Sprint: SHIFT
         </p>
       </div>
-    </div>
+    </div> -->
   </body>
 </html>
