Added desktop and mobile detection

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
 
     <div id="blocker">
       <div id="instructions">
-        <p style="font-size: 36px">Click to enter</p>
+        <p id="instructions-text" style="font-size: 36px">Click to enter...</p>
         <p>
           Move: WASD<br />
           Look: MOUSE<br />
